--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ag-grid-community": "^25.0.1",
     "bootstrap": "^4.4.0",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.14.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
