--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "admin-lte": "^3.0.5",
     "ag-grid-angular": "^25.0.1",
     "ag-grid-community": "^25.0.1",
+    "ag-grid-enterprise": "^25.0.1",
     "bootstrap": "^4.4.0",
     "rxjs": "~6.5.4",
     "sweetalert2": "^10.14.0",
